reddit.css
/* Key Colors:

Union Dark Blue: #18262E;
Union Light Blue: #6097CB;
Dark Gold: #d5cd72;
Lighter Gold: #d5cd72;
White: #FFF;
Side Bar: #28292D

*/

/* Link Flair Colors */

a[href*="free_talk_friday"].title:link {
  color: #b39700;
  font-weight: bold;
}

a[href*="free_talk_friday"].title:visited {
  color: #b39700 !important;
  font-weight: bold;
}

a[href*="thread"].title:link {
  color: #000;
  font-weight: bold;
}

a[href*="thread"].title:visited {
  color: #000 !important;
  font-weight: bold;
}


a[href*="pre_match"].title:link {
  color: #000;
  font-weight: bold;
}

a[href*="pre_match"].title:visited {
  color: #000 !important;
  font-weight: bold;
}

a[href*="post_match"].title:link {
  color: #000;
  font-weight: bold;
}

a[href*="post_match"].title:visited {
  color: #000 !important;
  font-weight: bold;
}

a[href*="fantasy_talk_tuesday"].title:link {
  color: #b39700;
  font-weight: bold;
}

a[href*="fantasy_talk_tuesday"].title:visited {
  color: #b39700 !important;
  font-weight: bold;
}

a[href*="match thread"].title:link {
  color: #b00;
  font-weight: bold;
}

a[href*="match thread"].title:visited {
  color: #b00 !important;
  font-weight: bold;
}



/**********TEXT*************/

body {
  color: #021f42;
  background-color: #EEEEEE;
}

a:link {
  color: #5e97ce;
}

/* unvisited link */

a:visited {
  color: #5e97ce;
}

/* visited link */

a:hover {
  color: #5087bf;
}

/* mouse over link */

a:active {
  color: #5087bf;
}

/* selected link */

.comment .md a {
  color: #9D7E40;
}

a:link {
  text-decoration: none;
}

a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

a:active {
  text-decoration: underline;
}


.flat-list a {
  color: #5087bf!important;
}

hr {
  color: #5087bf;
  background-color: #5087bf;
  height: 2px;
}



#search input[type="text"] {
  bottom: 15px!important;
  z-index: 100!important;
  font-size: 14px!important;
  border: none;
  text-transform: capitalize;
  border-radius: 25px;
  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, .15);
  padding: 10px 20px;
}

#search input[type=submit] {
  margin-left: -30px;
}


/*****replace "readers" with something else*****/

div.titlebox span.word {
  display: none
}

div.titlebox span.number:after {
  content: " Supporters"
}


/**********HEADER************/

#sr-header-area a.RESShortcutsCurrentSub,
#RESSubredditGroupDropdown .RESShortcutsCurrentSub a {
  color: #6097CB !important;
  font-weight: bold;

}


#sr-header-area {
  background-color: #18262E;
  color: #FFFFFF;
  white-space: nowrap;
  text-transform: uppercase;
  border-bottom: 0px solid #808080;
  font-size: 90%;
  height: 18px;
  line-height: 18px;
  padding-left: 0px;

}


#header {
  background-image: url(%%NavigationBar%%);
  background-color: #4f91cd;
  background-repeat: no;
  height: 200px;
  border-bottom: none;
  /*0px solid #6097CB;*/
}

#header-bottom-left .redditname a::before {
  content: '/r/';
}

#header-bottom-left .redditname a {
  position: absolute;
  bottom: 75px;
  padding-left: 20px;
  font-size: 28px;
  text-decoration: none;
  text-transform: uppercase;
  padding-bottom: 20px;
  padding-top: 20px;
  color: #ead7ac;
}

#header-bottom-left .redditname a:hover {
  color: #4a8aca;
}

#header-bottom-left .redditname {
  color: #15212f;
}

#header-bottom-left .tabmenu {
  margin-left: 50px
}

#header-img {
  margin: 10px 0 -5px 5px
}

#header-bottom-right {
  background: #ead7ac;
  padding: 4px 8px;
  border-radius: 0;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
  border: 1px dotted #5087bf;
  border-bottom: 0
}

a.subbarlink {
  color: #ead7ac;
}

.link {
  margin: 0px;
  padding: 8px;
  border-bottom: 1px solid #ddd;
}

.content {
  margin-top: 10px
}

.sitetable:nth-of-type(1) {
  list-style-type: none;
  width: calc(97% - 300px);
  margin: 15px;
  background: white;
  border-radius: 8px;
  box-shadow: 2px 2px 14px 2px rgba(0, 0, 0, .15);
}

.tabmenu li {
  margin: 0 3px
}

.tabmenu li a {
  background-color: transparent;
  color: #18262E;
  font-size: 15px;
  padding: 1px 4px 2px;
  cursor: pointer;
  -webkit-border-top-right-radius: 0px;
  -webkit-border-top-left-radius: 0px;
  -moz-border-radius-topright: 0px;
  -moz-border-radius-topleft: 0px;
  border-top-right-radius: 0px;
  border-top-left-radius: 0px
}

.tabmenu li.selected a {
  background-color: transparent;
  color: #fff;
  border: none
}

.tabmenu li a:hover,
.tabmenu li a:focus {
  background-color: #6097CB;
  color: #ead7ac;
  border: none
}

.tabmenu {
  margin: 0px 0px -3px -20px!important;
  padding-bottom: 0px;
  text-transform: uppercase;
}

.res-tabmenu-button {
  display: none!important;
}


/* ===== Table formatting ===== */

.md table {
  border: 2px solid #fff;
  box-shadow: 0 0 5px #ccc;
  margin: 1px 0 1px 0;
  position: relative;
  left: 1px
}

.titlebox .md table {
  width: 99%
}

.md table th {
  background: #303030;
  border-top: none;
  border-left: none;
  border-bottom: none;
  border-right: 1px solid #525252;
  color: #fafafa;
  font-weight: bold;
  padding: .5em;
  text-align: center;
  text-shadow: 1px 1px 0 #2f2f2f;
  font-size: 10px
}

.md table th a {
  color: #363636
}


/* === Formatting === */

.md table td {
  font-size: 10px;
  border: none;
  padding: .3em;
  vertical-align: middle
}

.md table td a {
  color: #27262c !important;
  font-weight: normal
}

.md table td a:hover {
  color: #fff !important;
  text-decoration: underline
}

/* === Alternate row colors === */

.md tr:nth-of-type(odd) {
  background: #fff;
  color: #363636
}

.md tr:nth-of-type(even) {
  background: #e3e3e3;
  color: #363636
}

/* === Alternate channel color === */

.md tr:nth-of-type(odd) td:nth-of-type(7) {
  background: #eee
}

.md tr:nth-of-type(even) td:nth-of-type(7) {
  background: #ccc
}

/* === Hover color === */

.md tr:hover {
  background: #a0cdff !important;
  cursor: default
}

.md tr:hover td:nth-of-type(7) {
  background: #396 !important;
  cursor: default
}
/* ... */

